--- a/ng-ebook/src/index.html
+++ b/ng-ebook/src/index.html
@@ -65,4 +65,29 @@
   </app-root>
 </body>
 
+<script src="assets/admin/js/jquery.min.js"></script>
+
+<script>
+  $(document).ready(function () {
+    $.ajax({
+      url: '/api/user/autoLogin',
+      type: 'post',
+      dataType: 'json',
+      data:{
+      },
+      contentType: 'application/x-www-form-urlencoded;charset=UTF-8',
+      cache: false,
+      success: function(data) {
+        if(data.status==10000){
+
+        }
+      },
+      error : function() {
+        alert('服务器失去响应，请检查您的网络！');
+
+
+      }
+    })
+  })
+</script>
 </html>
