--- a/ng-ebook/src/index.html
+++ b/ng-ebook/src/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
   <app-root>
-    <div style="background-image: url(assets/startbg.jpg);height: 100%;width: 100%;background-size: cover;background-position: center;background-repeat: no-repeat"></div>
+    <div style="background-image: url(assets/bookbg.jpg);height: 100%;width: 100%;background-size: cover;background-position: center;background-repeat: no-repeat"></div>
   </app-root>
 </body>
 
