--- a/ng-ebook/src/index.html
+++ b/ng-ebook/src/index.html
@@ -55,6 +55,7 @@
   <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
   <!--jqweui，bootstrap，weui，font-awesome-->
   <link rel="stylesheet" href="assets/admin/css/file.min.css">
+  <link rel="stylesheet" href="assets/admin/css/weui.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="assets/ngbootstrap.min.css" rel="stylesheet">
 
